Remove the session size limit and remove the unique title requirement